# Re-TDWMFC-2024

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  _typos.toml  mypy.ini  pyproject.toml
assets/: af-notes.qmd
assets/blog_post/: on_tdwmfc_2024_replication.md
assets/descriptions/: model_descriptions.md  table_01.md
assets/experiments/fig_01_2025-01-04_14/: fig_01_2025-01-04_14.json  fig_01_sol_0_2025-01-04_14.npy  fig_01_sol_1_2025-01-04_14.npy  fig_01_sol_2_2025-01-04_14.npy  fig_01_sol_3_2025-01-04_14.npy
assets/experiments/fig_02_2025-01-04_14/: fig_02_2025-01-04_14.json  fig_02_sol_0_2025-01-04_14.npy  fig_02_sol_1_2025-01-04_14.npy  fig_02_sol_2_2025-01-04_14.npy
assets/experiments/fig_03_2025-01-04_14/: fig_03_2025-01-04_14.json  fig_03_sol_0_2025-01-04_14.npy
assets/experiments/fig_08_2025-01-04_14/: fig_08_2025-01-04_14.json  fig_08_sol_0_2025-01-04_14.npy
assets/experiments/fig_09_2025-01-04_14/: fig_09_2025-01-04_14.json  fig_09_sol_0_2025-01-04_14.npy
assets/experiments/fig_10_2025-01-04_14/: fig_10_2025-01-04_14.json  fig_10_sol_0_2025-01-04_14.npy
assets/experiments/fig_11_2025-01-04_14/: fig_11_2025-01-04_14.json  fig_11_sol_0_2025-01-04_14.npy
assets/misc/: package-notes.txt  paste_bin.txt  references.bib
assets/styles/: fig_replication.mplstyle  general_AF.mplstyle  multi_param.mplstyle  purple_line.mplstyle  single_params.mplstyle
config/: default.toml  exp_fig_01.toml  fig_01.toml  fig_02.toml  fig_03.toml  fig_08.toml  fig_09.toml  fig_10.toml  fig_11.toml  figure_01.toml
notebooks/: clio_vars_params_effects.py  fig_02_self_contained.py  fig_03_self_contained.py  model_descriptions.md  table_01.md  trials_in_making_DFM.py  using_DWM.py  using_DWM.qmd
src/: DFM.py  DWM.py  all_figs.py  dfm.py  dwm.py  exp_setup.py  fig_01.py  fig_02.py  fig_05.py  fig_06.py  fig_09.py  fig_10.py  fig_11.py  figure-01.py  figure-02.py  figure-03.py  figure-04.py  figure-07.py  figure-08.py  models.py  utils.py
