[tool.poetry]
name = "re-tdwmfc-wittmann"
version = "0.0.1"
description = "A reproduction in Python of the 2024 paper The Demographic-Wealth model for cliodynamics by Wittmann and Kuehn."
authors = ["AFg6K7h4fhy2 <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
