[tool.poetry]
name = "re-tdwmfc-wittmann"
version = "0.0.1"
description = "A reproduction in Python of the 2024 paper (The Demographic-Wealth model for cliodynamics) by Wittmann and Kuehn."
authors = ["AFg6K7h4fhy2 <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
license = "Apache-2.0"
package-mode = false
readme = "README.md"
repository = "https://github.com/AFg6K7h4fhy2/Re-TDWMFC-2024"
keywords = ["cliodynamics", "python", "modeling", "mathematics", "demography", "history"]

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
diffrax = "^0.6.0"
jax = "^0.4.35"
jupyter = "^1.1.1"
matplotlib = "^3.9.3"
toml = "^0.10.2"

[tool.poetry.urls]
"Repository Issues" = "https://github.com/AFg6K7h4fhy2/Re-TDWMFC-2024/issues"
"Author Homepage" = "https://github.com/AFg6K7h4fhy2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
